Fix edit attachment name when name overflows

--- a/grails-app/assets/stylesheets/application/styles.less
+++ b/grails-app/assets/stylesheets/application/styles.less
@@ -729,6 +729,8 @@ a[data-toggle="tab"] button {
 .table.attachments {
   margin-bottom: 0;
   .filename {
+    max-width: 275px;
+    display: inline-block;
     .text-overflow();
   }
 }
